<resources>
    <string name="app_name">Goal Getters</string>
    <string name="logo_description">Goal Getters Logo</string>

    <!-- all -->
    <string name="all_app_version">Sample UI v%1$s / SDK v%2$s</string>

    <string name="all_create">Create</string>
    <string name="all_invite">Invite</string>

    <string name="all_group_channels">Group Channels</string>
    <string name="all_open_channels">Open Channels</string>

    <!-- main -->
    <string name="main_label">Goal Getters</string>

    <string name="main_drawer_open">Open navigation drawer</string>
    <string name="main_drawer_close">Close navigation drawer</string>
    <string name="select_channel_type">Select channel type</string>

    <!-- create group -->
    <string name="create_group_label">Create Group</string>
    <string name="search_members">Search to add members</string>
    <string name="group_name_label">Group Name</string>

    <!-- create goal -->
    <string name="create_goal_label">Create Goal</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_name">Name</string>
    <string name="select_group_dialog_title">Choose Group</string>

    <!-- goal -->
    <string name="activity_goal_label">Goal Progress</string>
    <string name="title_my_progress">My Progress</string>
    <string name="title_members">Members</string>
    <string name="title_chat">Chat</string>

    <!-- report progress -->
    <string name="report_progress_label">Report Progress</string>

    <!-- login or create account -->
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_sign_in">Sign In</string>
    <string name="login_create_account">Create Account</string>
    <string name="create_account_label">Create Account</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="join_label">Join Goal Getters</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- select profile icon -->
    <string name="select_icon_label">Select Your Profile Icon</string>

    <!-- Menu -->
    <string name="title_goals">Goals</string>
    <string name="title_groups">Groups</string>
    <string name="title_past_goals">Past Goals</string>

    <string name="back_arrow">Back</string>

    <!-- Open Channel List -->
    <string name="open_channel_list_participant_count">%1$d participants</string>

    <string name="create_open_channel">Create Open Channel</string>
    <string name="participant_list">Participants</string>

    <!-- Group Channel List -->
    <string name="group_channel_list_file_message_text">%1$s has uploaded a file.</string>

    <string name="create_group_channel">Create Group Channel</string>
    <string name="member_list">Members</string>
    <string name="invite_member">Invite members</string>

    <!-- Content descriptions -->
    <string name="open_channel_chat_content_desc_profile">Profile image</string>

    <!-- Menu actions -->
    <string name="action_create_channel">Create channel</string>

    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="upload">Upload</string>
    <string name="resend_message">Resend</string>
    <string name="delete_message">Delete</string>

    <!-- Message Status -->
    <string name="message_sending">Sending</string>
    <string name="message_failed">Failed</string>
    <string name="goal_name">Goal Name</string>
    <string name="deadline">Deadline</string>
    <string name="units">Units</string>


    <!-- Goal Getters -->
    <string name="create_group">Create Group</string>
    <string name="create_goal">Create Goal</string>
    <string name="report_progress">REPORT PROGRESS</string>
    <string name="description">Description</string>
    <string name="my_goals_title">My Goals</string>

    <string name="title_activity_select_icon">Select Profile Icon</string>
    <string name="title_activity_create_group">Create Group</string>
    <string name="title_activity_groups">Edit Group</string>
    <string name="goal_action">Action</string>
    <string name="start_date">Start Date</string>
    <string name="pick_start_date">Choose Start Date</string>
    <string name="pick_deadline">Choose Deadline</string>


</resources>
