<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context="org.truthdefender.goalgetters.main.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_gravity="center"
        android:orientation="vertical">

        <include layout="@layout/section_title"/>

        <ImageView
            android:id="@+id/image_login_logo"
            android:src="@drawable/goal_getters_icon"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo_description"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_login_username"
                android:inputType="textVisiblePassword"
                android:imeOptions="actionNext"
                android:hint="@string/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_login_password"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="44dp">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_sign_in"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_margin="20dp"
                android:layout_weight="0.5"
                android:text="@string/login_sign_in"
                app:theme="@style/AppTheme.ButtonStyle"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_create_account"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_margin="20dp"
                android:layout_weight="0.5"
                android:text="@string/login_create_account"
                app:theme="@style/AppTheme.ButtonStyle"/>

        </LinearLayout>

    </LinearLayout>

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/progress_bar_login"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible" />


</android.support.design.widget.CoordinatorLayout>
