<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_create_goal"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/ToolBarStyle"
        android:elevation="4dp"/>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_goal_name"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_marginTop="75dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_goal_name"
                android:hint="@string/goal_action"
                android:inputType="textVisiblePassword"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>


        <NumberPicker
            android:id="@+id/number_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/text_goal_name"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_units"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/number_picker"
            android:layout_marginTop="75dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edittext_units"
            android:hint="@string/units"
            android:inputType="textVisiblePassword"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp">
        <Button
            android:id="@+id/start_date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_start_date"
            android:onClick="showStartDatePickerDialog" />
        <Button
            android:id="@+id/deadline_date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/pick_deadline"
            android:onClick="showDeadlinePickerDialog" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/group_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:textStyle="bold"
            android:text="Group:"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/group_label"
            android:background="@color/colorAccent"
            android:textSize="20dp"
            android:elevation="4dp"
            android:text="Choose Group"/>


    </RelativeLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:text="@string/create_goal"
        android:padding="15dp"
        android:layout_margin="15dp"
        android:elevation="4dp"
        android:textSize="26dp"
        android:textColor="@color/textColorWhite" />


</LinearLayout>