<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_create_goal"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:elevation="4dp"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_goal_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_create_goal"
        android:layout_marginTop="2dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edittext_goal_name"
            android:hint="@string/goal_name"
            android:inputType="textVisiblePassword"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <DatePicker
        android:id="@+id/date_picker"
        android:layout_toRightOf="@id/text_deadline"
        android:layout_below="@id/text_goal_name"
        android:layout_width="50dp"
        android:layout_height="50dp"

        />





    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_deadline"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_goal_name"
        android:layout_marginTop="2dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edittext_deadline"
            android:hint="@string/deadline"
            android:inputType="textVisiblePassword"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>



    <Button
        android:id="@+id/currency_button"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_deadline"
        android:background="@color/colorButton"
        android:textColor="@color/progress_bar_base"
        android:layout_margin="5dp"
        android:text="$"/>

    <NumberPicker
        android:id="@+id/number_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_deadline"
        android:layout_toRightOf="@id/currency_button"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_units"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_picker"
        android:layout_toRightOf="@id/number_picker"
        android:layout_marginTop="2dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edittext_units"
            android:hint="@string/units"
            android:inputType="textVisiblePassword"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:text="@string/create_goal"
        android:padding="15dp"
        android:layout_margin="15dp"
        android:elevation="4dp"
        android:textSize="26dp"
        android:textColor="@color/textColorWhite"
        android:layout_alignParentBottom="true" />


</RelativeLayout>