<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_create_goal"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:elevation="4dp"/>

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <Button
            android:id="@+id/currency_button"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:layout_below="@id/text_deadline"
            android:background="@color/colorButton"
            android:textColor="@color/progress_bar_base"
            android:text="$"/>

        <NumberPicker
            android:id="@+id/number_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_deadline"
            android:layout_toRightOf="@id/currency_button"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_units"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/date_picker"
            android:layout_toRightOf="@id/number_picker"
            android:layout_marginTop="75dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edittext_units"
                android:hint="@string/units"
                android:inputType="textVisiblePassword"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="10"
        android:gravity="top|left"
        android:scrollbars="vertical"
        android:hint="@string/description"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:text="@string/report_progress"
        android:padding="15dp"
        android:layout_margin="15dp"
        android:elevation="4dp"
        android:textSize="26dp"
        android:textColor="@color/textColorWhite"
        android:layout_alignParentBottom="true" />



</LinearLayout>