<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textColorWhite">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_create_group"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            android:theme="@style/ToolBarStyle"
            android:elevation="4dp"/>

        <Spinner
            android:id="@+id/group_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:textAlignment="center"
            android:spinnerMode="dialog"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/group_name"
                android:hint="@string/group_name_label"
                android:inputType="textCapWords"
                android:textSize="50sp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="bottom"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.SearchView
            android:id="@+id/search_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:queryHint="@string/search_members" />

        <android.support.v7.widget.RecyclerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/member_list_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <android.support.v7.widget.RecyclerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/search_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/create_group_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButton"
        android:text="@string/create_group"
        android:padding="15dp"
        android:layout_margin="15dp"
        android:elevation="4dp"
        android:textSize="26sp"
        android:textColor="@color/textColorWhite"
        android:layout_alignParentBottom="true" />

</RelativeLayout>